--- a/style.css
+++ b/style.css
@@ -1,24 +1,49 @@
 body {
-    background:linear-gradient(to bottom, #682580, #354197);
+    background: rgb(212, 212, 212);
+    margin: 2%;
 }
 
-
+#project-info {
+    float: left;
+    width: 10%;
+    border: 1px solid grey;
+    padding: 5px;
+    border-radius: 0%;
+    color: black;
+}
+#sub-blurb{
+    margin-left: 5%;
+    margin-right: 80%;
+}
+#title-container {
+    margin-left: 25%;
+    text-align: center;
+    width: 60%;
+    border: 1px solid grey;
+    border-radius: 0%;
+    padding: 10px;
+}
 h1 {
     font-family: monospace; 
-    color: #fefefe;
-    font-size: 120px;
+    color: black;
+    font-size: 60px;
 }
 
 h2 {
     font-family: monospace;
-    color: #fefefe;
-    font-size: 50px;
+    color: black;
+    font-size: 24px;
 }
 
 h3 {
     font-family: monospace;
-    color: #fefefe;
+    color: black;
     font-size: 50px;
+}
+
+#blurb{
+    width: 85%;
+    margin-left: 5%;
 }
 
 #textForm {
@@ -30,6 +55,7 @@ h3 {
     display: flex;
     align-items: center;
     margin-bottom: 20px; 
+    margin-left: 5%;
 }
 
 #user_input1,
@@ -44,8 +70,8 @@ button {
 }
 
 #outputMappingTable {
-    margin-left: 350px;
-    color: white;
+    margin-left: 60%;
+    color: black;
     font-family: monospace;
     
 }
@@ -63,7 +89,7 @@ button {
 
 label[for="user_input1"],
 label[for="user_input2"] {
-    color: white;
+    color: black;
     font-family: monospace;
     font-size: 20px;
     border: 1px solid #8d8b8b;
@@ -72,43 +98,78 @@ label[for="user_input2"] {
 
 
 #Data-heading p {
-    color: rgb(255, 255, 255);
+    color: black;
     font-family: monospace;
     font-size: 50px;
 }
 
-.review-text .read-more,
-.review-text .read-less {
-    color: rgb(151, 173, 81);
-    cursor: pointer;
+
+ #reviewsContainer {
+    float: left;
+    width: 30%;
+    margin-right: 2%;
 }
 
-.review-text .read-less {
+#dataframe_list {
+    float: left;
+    width: 30%;
+    margin-right: 2%;
+}
+
+#barChartContainer {
+    width: 33%; /* Each chart takes 33% of the available width */
+    height: 400px;
+    margin-right: 1%;
+    float: left;
+    margin-top: 150px;
+}
+#resultContainer{
     display: none;
 }
+#gaugeChartContainer {
+    width: 33%; /* Each chart takes 33% of the available width */
+    height: 400px;
+    margin-right: 1%;
+    float: left;
+    margin-top: 150px;}
 
-#reviewsList li {
-    color: white; 
-    font-family: monospace;
+#loadingContainer {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.5); /* Optional: semi-transparent overlay */
 }
 
-#reviewsList table {
-    width: 800px; 
-    margin: 0 auto; 
-    border-collapse: collapse; 
+.loading-circle {
+    border: 4px solid rgba(255, 255, 255, 0.3);
+    border-top: 4px solid #007bff; /* Adjust the color as needed */
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite;
 }
 
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 #reviewsList th,
 #reviewsList td {
-    border: 1px solid #757272; 
-    padding: 25px; 
+    border-top: 1px solid #757272;
+    border-left: 1px solid #757272;  
+    padding: 20px; 
     text-align: center; 
+    color: black !important;
+} 
+#reviewsList{
+    border-right: 1px solid #757272;  
+    border-bottom: 1px solid #757272;
 }
-
-#barChartContainer,
-#gaugeChartContainer {
-  width: 50%; 
-  height: 200px; 
-  float: left; 
-  margin-right: 10px; 
+#errorMessage{
+    display: none;
 }
